--- a/HeatMapTest/style_week.css
+++ b/HeatMapTest/style_week.css
@@ -1,18 +1,21 @@
 body {
-	background-color: #67A9BF;
+	background-color: #d2de76;
 }
 
 .cal-heatmap-container {
 	border-style: solid;
 	border-width: 2px;
-	border-radius: 25px;
+	border-radius: 20px;
 	background-color: white;
-	padding-bottom: 5px;
 	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 5px;
+	display: inline;
+
 }
 
 .cal-heatmap-container .domain-background {
-
+	/*fill: #75B4C9;*/
 }
 
 .y_2000.m_1 .domain-background {
@@ -54,7 +57,7 @@ body {
 #next {
 	font-size: 20px;
 	display: inline-block;
-	float: right;
+	margin-left: 10px;
 }
 
 #jumpTo {
@@ -80,23 +83,4 @@ body {
 
 #onClick-placeholder {
 	font-family: futura;
-}
-
-.tooltip{
-    display: inline;
- 	position: relative;
-}
-
-.tooltip:hover:after{
-    background: #333;
-    background: rgba(0,0,0,.8);
-    border-radius: 5px;
-    bottom: 26px;
-    color: #fff;
-    content: attr(title);
-    left: 20%;
-    padding: 5px 15px;
-    position: absolute;
-    z-index: 98;
-    width: 220px;
 }
