--- a/Cal-HeatMap/GlobalLit_ Dashboard_files/cal-heatmap_customstyle.css
+++ b/Cal-HeatMap/GlobalLit_ Dashboard_files/cal-heatmap_customstyle.css
@@ -28,6 +28,7 @@
 	background-color: white;
 	padding-bottom: 5px;
 	padding-left: 10px;
+	margin: auto;
 }
 
 #heatmap_continuous .cal-heatmap-container {
@@ -35,6 +36,7 @@
 	border-radius: 5px;
 	margin-top: 50px;
 	padding-left: 10px;
+	margin: auto;
 }
 
 
