--- a/Cal-HeatMap/GlobalLit_ Dashboard_files/cal-heatmap_customstyle.css
+++ b/Cal-HeatMap/GlobalLit_ Dashboard_files/cal-heatmap_customstyle.css
@@ -1,8 +1,3 @@
-
-.container-fluid{
-	padding-bottom: 40px;
-}
-
 .cal-heatmap-container .subdomain-text  {
 	font-size: 8px;
 	fill: #000000;
@@ -37,6 +32,7 @@
 	margin-top: 50px;
 	padding-left: 10px;
 	margin: auto;
+
 }
 
 
@@ -58,13 +54,12 @@
 	border-radius: 5px;
 	background-color: white;
 	margin-top: 10px;
-	margin-right: 28px;
-	margin-left: 28px;
 	padding-top: 5px;
 	padding-right: 5px;
 	padding-left: 5px;
 	padding-bottom: 5px;
 	cursor: pointer;
+	font-size: 20px;
 }
 
 #previous {
@@ -91,40 +86,64 @@
 	float: left;
 }
 
-.jumpButton{
+.button_container{
+	margin:auto;
+}
+
+.yearButton{
 	border-style: solid;
 	border-width: 1px;
 	border-radius: 5px;
 	background-color: white;
 	margin-top: 10px;
-	margin-right: 28px;
-	margin-left: 28px;
-	padding-top: 5px;
+	margin-right: 2px;
+	margin-left: 2px;
+	padding-top: 2px;
 	padding-right: 5px;
 	padding-left: 5px;
-	padding-bottom: 5px;
+	padding-bottom: 2px;
 	cursor: pointer;
-}
-
-#jumpTo {
-	font-size: 12px;
-	display: block;
-	text-align: center;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 50px;
-	width: 100px;
-}
-
-#rewind {
 	font-size: 12px;
 	text-align: center;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 100px;
+	display: inline;
 }
 
+.years{
+	display: table;
+	margin: 0 auto;
+}
+
+#months{
+	display: table;
+	margin: 0 auto;
+}
+
+.monthButton{
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 5px;
+	background-color: white;
+	margin-left: 2px;
+	padding-top: 2px;
+	padding-right: 3px;
+	padding-left: 3px;
+	padding-bottom: 2px;
+	cursor: pointer;
+	font-size: 13px;
+	display: inline-block;
+}
+
+
+#days{
+	display: inline;
+	
+}
+
+.day{
+	font-size: 15px;
+	width: 10px;
+	display: inline;
+}
 
 #onClick-placeholder {
 	margin-top: 10px;
