--- a/Cal-HeatMap/GlobalLit_ Dashboard_files/cal-heatmap_customstyle.css
+++ b/Cal-HeatMap/GlobalLit_ Dashboard_files/cal-heatmap_customstyle.css
@@ -18,7 +18,7 @@
   border-top-color: #ad001d;
 }
 
-#S0 .cal-heatmap-container {
+#standard_heatmap .cal-heatmap-container {
 	border-style: solid;
 	border-width: 0px;
 	border-radius: 25px;
@@ -28,7 +28,7 @@
 	margin: auto;
 }
 
-#continuous1 .cal-heatmap-container {
+#continuous_heatmap .cal-heatmap-container {
 	/*background-color: #f4decd;*/
 	border-radius: 5px;
 	padding-left: 10px;
@@ -36,13 +36,13 @@
 	background-color: #fff;
 }
 
-#s0 .cal-heatmap-container .graph-label
+#standard_heatmap .cal-heatmap-container .graph-label
 {
 	font-size: 15px;
 	fill: #000000;
 }
 
-#continuous1 .cal-heatmap-container .graph-label
+#continuous .cal-heatmap-container .graph-label
 {
 	font-size: 15px;
 	fill: #000000;
@@ -108,12 +108,7 @@
 	display: inline;
 }
 
-.yearsStandard{
-	display: table;
-	margin: 0 auto;
-}
-
-.yearsContinuous{
+.years{
 	display: table;
 	margin: 0 auto;
 }
@@ -176,6 +171,7 @@
 	box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
 	display: none;
 	box-sizing: border-box;
+	z-index: 4;
 }
 
 .ch-tooltip::after{
@@ -192,6 +188,7 @@
 	margin-left: -6px;
     border-width: 6px 6px 0;
     border-top-color: #222;
+    z-index: 4;
 }
 
 .content {
