--- a/Cal-HeatMap/GlobalLit_ Dashboard_files/cal-heatmap_customstyle-Revised.css
+++ b/Cal-HeatMap/GlobalLit_ Dashboard_files/cal-heatmap_customstyle-Revised.css
@@ -102,7 +102,8 @@
 .centerwrapper
 {
     margin: auto;
-    width: 302pt;
+    /*width: 302pt; */
+    display: table;
 }
 
 
@@ -202,11 +203,15 @@
     display: block;
     bottom: 0px; /*bottom: -6px for little pointer*/
     left: 50%;
-    margin-left: -6px;
+    margin-left: 25px;
     border-width: 6px 6px 0;
     border-top-color: #222;
 }
 
 .content {
     overflow: visible;
+}
+
+.tooltip_container {
+    position: absolute;
 }
